Fixed distorted image issue with object-contain: fill in css

--- a/styles.css
+++ b/styles.css
@@ -69,6 +69,7 @@ header .profile-image {
   margin-top: 50px;
   width: 200px;
   height: 200px;
+  object-fit: cover;
   border-radius: 50%;
   border: 3px solid white;
   transition: all .5s;
